--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,31 +10,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: desafio_backend
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    env:
-      DB_HOST: localhost
-      DB_NAME: desafio_backend
-      DB_PASSWORD: postgres
-      DB_USER: postgres
-      DB_PORT: 5432
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Set up Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.17.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Start services
+        run: docker-compose up -d
+
+      - name: Wait for PostgreSQL
+        run: |
+          until docker-compose exec db pg_isready -U postgres; do
+            echo "Waiting for PostgreSQL to be ready..."
+            sleep 1
+          done
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -47,5 +40,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-          pytest
+        env:
+          DB_HOST: localhost
+          DB_NAME: desafio_backend
+          DB_USER: postgres
+          DB_PASSWORD: postgres
+          DB_PORT: 9090
+        run: pytest
